tests/tests/ui-stable/non-lit.stderr
error: proc-macro derive panicked
  --> $DIR/non-lit.rs:13:5
   |
13 |     indoc!(fail);
   |     ^^^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal
   = note: this error originates in a macro outside of the current crate (run with -Z external-macro-backtrace for more info)

